objects/FLODocs__FLO_Health_Check__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__CKM_Certificate_Expiration__c</fullName>
        <inlineHelpText>Certificate Expiration</inlineHelpText>
        <label>CKM Certificate Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__CKM_Expired_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Expired Certificate</inlineHelpText>
        <label>CKM Expired Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__CKM_Key_Size__c</fullName>
        <inlineHelpText>Key Size</inlineHelpText>
        <label>CKM Key Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization__c</fullName>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipName>Health_Checks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FLODocs__FSS_number_of_Hybrid_Behavior__c</fullName>
        <inlineHelpText>Number of security risk file types with Hybrid behavior</inlineHelpText>
        <label>FSS number of Hybrid Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__HS_Number_Object_Default_External_Access__c</fullName>
        <inlineHelpText>Number of Objects with Default External Access Set to Public</inlineHelpText>
        <label>HS Number Object Default External Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__LAP_EnableAdminLoginAsAnyUser__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Administrators Can Log in as Any User</inlineHelpText>
        <label>LAP EnableAdminLoginAsAnyUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__PP_Complexity__c</fullName>
        <inlineHelpText>Password complexity requirement</inlineHelpText>
        <label>PP Complexity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__PP_MaxLoginAttempts__c</fullName>
        <inlineHelpText>Maximum invalid login attempts</inlineHelpText>
        <label>PP Max Login Attempts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__PP_expiration__c</fullName>
        <inlineHelpText>User passwords expire in</inlineHelpText>
        <label>PP expiration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__PP_historyRestriction__c</fullName>
        <inlineHelpText>Enforce password history</inlineHelpText>
        <label>PP historyRestriction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__PP_minimumPasswordLength__c</fullName>
        <inlineHelpText>Minimum password length</inlineHelpText>
        <label>PP minimumPasswordLength</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__PP_minimumPasswordLifetime__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Require a minimum 1 day password lifetime</inlineHelpText>
        <label>PP minimumPasswordLifetime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__PP_obscureSecretAnswer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Obscure secret answer for password resets</inlineHelpText>
        <label>PP obscureSecretAnswer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__RS_Protocol_Security_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disable Protocol Security</inlineHelpText>
        <label>RS Protocol Security Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_EnableCSPOnEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable Content Security Policy protection for email templates</inlineHelpText>
        <label>SS EnableCSPOnEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_EnableClickjackSetup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable clickjack protection for Setup pages</inlineHelpText>
        <label>SS EnableClickjackSetup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_EnableContentSniffingProtection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable Content Sniffing protection</inlineHelpText>
        <label>SS EnableContentSniffingProtection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_EnableSMSIdentity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Let users verify their identity by text (SMS)</inlineHelpText>
        <label>SS EnableSMSIdentity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_EnforceIpRangesEveryRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enforce login IP ranges on every request</inlineHelpText>
        <label>SS EnforceIpRangesEveryRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_canConfirmEmailChangeInLightningCommu__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Require email confirmations for email address changes (applies to users in Experience Builder sites)</inlineHelpText>
        <label>SS canConfirmEmailChangeInLightningCommu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_enableClickjackNonsetupSFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable clickjack protection for non-Setup Salesforce pages</inlineHelpText>
        <label>SS enableClickjackNonsetupSFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_enableClickjackNonsetupUser__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable clickjack protection for customer Visualforce pages with standard headers</inlineHelpText>
        <label>SS enableClickjackNonsetupUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_enableXSSProtection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable XSS protection</inlineHelpText>
        <label>SS enableXSSProtection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_forceLogoutOnSessionTimeout__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Force logout on session timeout</inlineHelpText>
        <label>SS forceLogoutOnSessionTimeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_forceRelogin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Force relogin after Login-As-User</inlineHelpText>
        <label>SS forceRelogin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_identityConfirmationOnEmailChange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Require identity verification for email address changes</inlineHelpText>
        <label>SS_identityConfirmationOnEmailChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_lockSessionsToDomain__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Lock sessions to the domain in which they were first used</inlineHelpText>
        <label>SS lockSessionsToDomain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__SS_sessionTimeout__c</fullName>
        <inlineHelpText>Session Timeout</inlineHelpText>
        <label>SS sessionTimeout</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>FLO Health Check</label>
    <nameField>
        <label>FLO Health Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLO Health Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>